exports[`test $rootScope.googleMapsApiKey [ng-disabled] [ng-model] [ng-readonly] 1`] = `
"
  <div>
    <bm-location-on-map coords=\"$ctrl.ngModel.$viewValue\" ng-disabled=\"true\" ng-readonly=\"true\" class=\"ng-isolate-scope\" readonly=\"readonly\" disabled=\"disabled\">
  <!-- ngIf: $ctrl.ngDisabled --><bm-static-location-on-map ng-if=\"$ctrl.ngDisabled\" coords=\"$ctrl.coords\" class=\"ng-scope ng-isolate-scope\">
  <figure>
    <img ng-src=\"\" title=\"map of unspecified location\" height=\"300\" width=\"300\">
  </figure>
</bm-static-location-on-map><!-- end ngIf: $ctrl.ngDisabled -->
  <!-- ngIf: !$ctrl.ngDisabled -->
</bm-location-on-map>

    <!-- ngIf: !$ctrl.ngDisabled && !$ctrl.ngReadonly -->
  </div>
"
`;

exports[`test $rootScope.googleMapsApiKey [ng-disabled] [ng-model] 1`] = `
"
  <div>
    <bm-location-on-map coords=\"$ctrl.ngModel.$viewValue\" ng-disabled=\"true\" ng-readonly=\"false\" class=\"ng-isolate-scope\" disabled=\"disabled\">
  <!-- ngIf: $ctrl.ngDisabled --><bm-static-location-on-map ng-if=\"$ctrl.ngDisabled\" coords=\"$ctrl.coords\" class=\"ng-scope ng-isolate-scope\">
  <figure>
    <img ng-src=\"\" title=\"map of unspecified location\" height=\"300\" width=\"300\">
  </figure>
</bm-static-location-on-map><!-- end ngIf: $ctrl.ngDisabled -->
  <!-- ngIf: !$ctrl.ngDisabled -->
</bm-location-on-map>

    <!-- ngIf: !$ctrl.ngDisabled && !$ctrl.ngReadonly -->
  </div>
"
`;

exports[`test $rootScope.googleMapsApiKey [ng-model] [ng-readonly] 1`] = `
"
  <div>
    <bm-location-on-map coords=\"$ctrl.ngModel.$viewValue\" ng-disabled=\"true\" ng-readonly=\"true\" class=\"ng-isolate-scope\" readonly=\"readonly\" disabled=\"disabled\">
  <!-- ngIf: $ctrl.ngDisabled --><bm-static-location-on-map ng-if=\"$ctrl.ngDisabled\" coords=\"$ctrl.coords\" class=\"ng-scope ng-isolate-scope\">
  <figure>
    <img ng-src=\"\" title=\"map of unspecified location\" height=\"300\" width=\"300\">
  </figure>
</bm-static-location-on-map><!-- end ngIf: $ctrl.ngDisabled -->
  <!-- ngIf: !$ctrl.ngDisabled -->
</bm-location-on-map>

    <!-- ngIf: !$ctrl.ngDisabled && !$ctrl.ngReadonly -->
  </div>
"
`;

exports[`test $rootScope.googleMapsApiKey [ng-model] 1`] = `
"
  <div>
    <bm-location-on-map coords=\"$ctrl.ngModel.$viewValue\" ng-disabled=\"true\" ng-readonly=\"false\" class=\"ng-isolate-scope\" disabled=\"disabled\">
  <!-- ngIf: $ctrl.ngDisabled --><bm-static-location-on-map ng-if=\"$ctrl.ngDisabled\" coords=\"$ctrl.coords\" class=\"ng-scope ng-isolate-scope\">
  <figure>
    <img ng-src=\"\" title=\"map of unspecified location\" height=\"300\" width=\"300\">
  </figure>
</bm-static-location-on-map><!-- end ngIf: $ctrl.ngDisabled -->
  <!-- ngIf: !$ctrl.ngDisabled -->
</bm-location-on-map>

    <!-- ngIf: !$ctrl.ngDisabled && !$ctrl.ngReadonly --><div ng-if=\"!$ctrl.ngDisabled &amp;&amp; !$ctrl.ngReadonly\" class=\"ng-scope\">

      <!-- ngIf: $ctrl.isEditing -->
      <!-- ngIf: $ctrl.isEditing -->
      <!-- ngIf: $ctrl.isEditing -->

      <!-- ngIf: !$ctrl.isEditing --><button type=\"button\" ng-if=\"!$ctrl.isEditing\" ng-click=\"$ctrl.onClear()\" class=\"ng-scope\">Clear</button><!-- end ngIf: !$ctrl.isEditing -->
      <!-- ngIf: !$ctrl.isEditing --><button type=\"button\" ng-if=\"!$ctrl.isEditing\" ng-click=\"$ctrl.onEdit()\" class=\"ng-scope\">Edit
      </button><!-- end ngIf: !$ctrl.isEditing -->

    </div><!-- end ngIf: !$ctrl.ngDisabled && !$ctrl.ngReadonly -->
  </div>
"
`;
